[project]
name = "proect-2-0"
version = "0.1.0"
description = ""
authors = [
    {name = "Maslykou Vitalii",email = "9319899520@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "proect_2"}]


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
mypy = "^1.15.0"


[tool.poetry.group.lint.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
